<resources>
    <string name="app_name">Wexford Football League</string>
    <string name="action_report">Manage My Teams</string>
    <string name="add_Title">Register Team</string>
    <string name="addLogo">Add Crest</string>
    <string name="addButton">Complete Registration</string>
    <string name="TeamName">Name</string>
    <string name="TeamLocation">Location</string>
    <string name="teamPlayers">amountOfPlayer</string>
    <string name="defaultAmount">11</string>
    <string name="defaultMethod">N/A</string>
    <string name="loading">Please wait while we load in some data</string>


    //Add A team//
    <string name="team_Name">Team Name</string>
    <string name="homePitchLocation">Where is the home pitch located?</string>
    <string name="editLogoMessage">You will NOT be able to change the crest later on</string>
    <string name="QteamName">What is your Team Name</string>
    <string name="QamountOfPlayers">How many Players in Your Squad</string>
    <string name="Qlocation">Where is the teams Home Pitch</string>
    <string name="ChooseCrest">Upload your crest</string>
    <string name="MAF">Mark As Favourite</string>



    //List
    <string name="ManageTitle">Teams</string>

    //About Us
    <string name="ContactDetails">Contact Details</string>
    <string name="Registrar">REGISTRAR</string>
    <string name="myName"> Jamie Hogan </string>
    <string name="myNumber"> 083-383-9177</string>
    <string name="myEmail"> JamieHogan4848@gmail.com</string>

    <string name="chairman">CHAIRMAN</string>
    <string name="chairmanName">Denis Hennessy</string>
    <string name="chairmanNumber">085 1742610</string>
    <string name="chairmanEmail">DenisWFL@gmail.com</string>

    //Edit
    <string name="editTeam">Edit Team Details</string>
    <string name="editQuestion"> What Team Would You Like To Edit</string>


    //List
    <string name="update_title">Update Team </string>
    <string name="update_logo"> New Crest</string>
    <string name="update_Button"> Update Button</string>
    <string name="withdraw">Withdraw Team</string>




    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Jamie Hogan Assignment 1</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="action_edit">Edit A Team</string>

    //Title
    <string name="action_add">Wexford Football League </string>


    //Nav Bar
    <string name="menu_addTeam">Register Team</string>
    <string name="list">Manage My Teams</string>
    <string name="menu_allTeams">View All Teams</string>
    <string name="menu_about">About Us</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="nav_header_subtitle">Wexford Football League</string>
    <string name="select_team_image">Select Team Image</string>
    <string name="change_team_image">Change Team Image</string>

    //login
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Please Sign In</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Welcome To The Wexford Football League App</string>


    <string name="sign_in_google">Sign In with Google</string>
    <string name="sign_in_email">Sign In with Email</string>
    <string name="sign_in_phone">Sign In with Phone</string>

</resources>
