<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_AddTeam"
            android:icon="@drawable/ic_menu_add"
            android:title="@string/menu_addTeam" />
        <item
            android:id="@+id/nav_addedTeams"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/list" />
        <item
            android:id="@+id/nav_edit"
            android:icon="@drawable/ic_menu_edit"
            android:title="@string/menu_edit" />
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/ic_menu_aboutus"
            android:title="@string/menu_about" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
